# plugin-sync

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
patches/getrandom-0.2/src/: lib.rs
src/: binary_protocol.rs  host_bridge.rs  host_fs.rs  lib.rs  native_extism_stubs.rs  server_api.rs  state.rs  sync_engine.rs  sync_manifest.rs
src/ui/: history.html  settings.html  share.html  snapshots.html
tests/: integration.rs
