[package]
name = "diaryx_sync_extism"
version = "0.1.1"
edition = "2024"
rust-version = "1.91"
license-file = "LICENSE.md"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
diaryx_core = "1.3.1"
diaryx_sync = "1.3.1"
extism-pdk = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
base64 = "0.22"
log = "0.4"
getrandom = { version = "0.2", features = ["custom"] }
getrandom_03 = { package = "getrandom", version = "0.3", default-features = false }
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
diaryx_extism = { path = "../diaryx/crates/diaryx_extism", features = ["testing"] }
tokio = { version = "1", features = ["rt", "macros", "time"] }

[patch.crates-io]
getrandom = { path = "patches/getrandom-0.2" }
diaryx_core = { path = "../diaryx/crates/diaryx_core" }
diaryx_sync = { path = "../diaryx/crates/diaryx_sync" }

[profile.release]
lto = "fat"
codegen-units = 1
