[package]
name = "diaryx_sync_extism"
version = "0.1.6"
edition = "2024"
rust-version = "1.91"
license-file = "LICENSE.md"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
diaryx_core = "1.3.1"
diaryx_sync = "1.3.1"
diaryx_plugin_sdk = { version = "0.2.1", features = ["full"] }
extism-pdk = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
base64 = "0.22"
log = "0.4"
getrandom = { version = "0.2", features = ["custom"] }
zip = { version = "2", default-features = false, features = ["deflate"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
diaryx_extism = { version = "1.3.1", features = ["testing"] }
tokio = { version = "1", features = ["rt", "macros", "time"] }

[patch.crates-io]
diaryx_core = { git = "https://github.com/diaryx-org/diaryx.git", subdirectory = "crates/diaryx_core" }
diaryx_sync = { git = "https://github.com/diaryx-org/diaryx.git", subdirectory = "crates/diaryx_sync" }
getrandom = { git = "https://github.com/diaryx-org/plugin-sdk.git", subdirectory = "patches/getrandom-0.2" }

[profile.release]
lto = "fat"
codegen-units = 1
